--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,43 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: #111;
-  }
+* {
+  background-color: whitesmoke;
+}
+
+#contactInfoContainer {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 50%;
+  font-size: 10px;
+  background-color: #f1f1f1;
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
+}
+
+#bodycontent {
+  display: flex;
+  background-color: wheat;
+}
+
+#imagenUsuario {
+  object-fit: cover;
+  width: 30%;
+}
+
+#headerBox{
+  display: flex;
+}
+
+#headerText{
+  padding: 1%;
+}
