--- a/styles/style.css
+++ b/styles/style.css
@@ -1,96 +1,106 @@
 body {
-  background-color: cadetblue;
+    background-color: cadetblue;
 }
 
 #contactInfoContainer {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  font-size: 10px;
-  border: solid black 1px;
-  background-color: #f1f1f1;
-  box-shadow: 2px 2px 2px black;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    width: 50%;
+    border: solid black 1px;
+    background-color: rgb(122, 172, 173);
+    box-shadow: 2px 2px 2px black;
+}
+
+#bodyTextContainer {
+    margin-left: 1%;
 }
 
 li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
 }
 
 /* Change the link color on hover */
 li a:hover {
-  background-color: #555;
-  color: white;
+    background-color: #555;
+    color: white;
 }
 
 #bodyContent {
-  display: flex;
-  columns: 2;
-  background-color: rgb(122, 172, 173);
-  padding: 1%;
-  border: black solid 3px;
+    display: flex;
+    columns: 2;
+    background-color: whitesmoke;
+    padding: 1%;
+    border: black solid 3px;
 }
 
 #imagenUsuario {
-  object-fit: cover;
-  border: #000 solid;
-  box-shadow: 2px 2px 2px black;
+    object-fit: cover;
+    border: #000 solid;
+    box-shadow: 2px 2px 2px black;
 }
 
-#headerBox{
-  display: flex;
+#headerBox {
+    display: flex;
+    background-color: rgba(122, 172, 173, 0.5);
 }
 
-#headerText{
-  padding: 1%;
+#headerText {
+    padding: 1%;
 }
 
-#imageContainer{
-  padding: 1%;
-  border-color: #000;
+#imageContainer {
+    padding: 1%;
+    border-color: #000;
 }
 
-#textSpace{
-  padding-left: 1%;
-  border-top: 0px;
-  border-bottom: 1px;
-  border-left: 0px;
-  border-right: 0px;
-  border-style: solid;
-  border-color: black;
-  margin-left: 3%;
-  margin-right: 2%;
-  margin-bottom: 1%;
+#textSpace {
+    padding-left: 1%;
+    border-top: 0px;
+    border-bottom: 1px;
+    border-left: 0px;
+    border-right: 0px;
+    border-style: solid;
+    border-color: black;
+    margin-left: 3%;
+    margin-right: 2%;
+    margin-bottom: 1%;
 }
 
-#textSpace p{
-  padding-left: 1%;
-  margin-top: 1%;
+#textSpace p {
+    padding-left: 1%;
+    margin-top: 1%;
 }
 
-#textSpace h3{
-  margin-bottom: 1%;
+#textSpace h3 {
+    margin-bottom: 1%;
 }
 
 #nombreHeader {
-border: #000;
-border-width: 1px;}
+    border: #000;
+    border-width: 1px;
+}
 
 #nombreContainer {
-  border-color: #000;
-  border-width: 1px;
+    border-color: #000;
+    border-width: 1px;
+}
+
+#nombreContainer h2 {
+    font-size: 300%;
+    border-bottom: 5px solid black;
 }
 
 header {
-  background-color: black !;
-  color: black;
+    background-color: black !;
+    color: black;
 }
 
-header h1{
-  text-align: center;
-  text-shadow: 2px 2px 2px black;
+header h1 {
+    text-align: center;
+    text-shadow: 2px 2px 2px black;
 }
-
-
