--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 1%;
     font-size: 10px;
-    width: 50%;
+    width: 25%;
     border: solid black 1px;
     background-color: rgb(122, 172, 173);
     box-shadow: 2px 2px 2px black;
@@ -15,6 +15,7 @@ body {
 
 #bodyTextContainer {
     margin-left: 1%;
+    width: 75%;
 }
 
 li a {
@@ -36,6 +37,7 @@ li a:hover {
     background-color: whitesmoke;
     padding: 1%;
     border: black solid 3px;
+    box-shadow: 2px 2px 2px #000 ;
 }
 
 #imagenUsuario {
@@ -69,6 +71,7 @@ li a:hover {
     margin-left: 3%;
     margin-right: 2%;
     margin-bottom: 1%;
+    white-space: normal;
 }
 
 #textSpace p {
@@ -93,6 +96,8 @@ li a:hover {
 #nombreContainer h2 {
     font-size: 300%;
     border-bottom: 5px solid black;
+
+    white-space: normal;
 }
 
 header {
@@ -103,4 +108,22 @@ header {
 header h1 {
     text-align: center;
     text-shadow: 2px 2px 2px black;
+}
+
+.contactData {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contactListItem h4{
+    margin-bottom: 0%;
+    text-decoration: underline;
+}
+
+.contactListItem{
+    margin-left: 1%;
+}
+
+#infoContacto{
+    font-size: large;
 }
