--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 1%;
-    font-size: 10px;
     width: 25%;
     border: solid black 1px;
     background-color: rgb(122, 172, 173);
@@ -78,10 +77,12 @@ li a:hover {
 #textSpace p {
     padding-left: 1%;
     margin-top: 1%;
+    font-size: 1vw;
 }
 
 #textSpace h3 {
     margin-bottom: 1%;
+    font-size: 1vw;
 }
 
 #nombreHeader {
@@ -95,7 +96,7 @@ li a:hover {
 }
 
 #nombreContainer h2 {
-    font-size: 300%;
+    font-size: 7vw;
     border-bottom: 5px solid black;
     white-space: normal;
 }
@@ -107,17 +108,18 @@ header {
 
 header h1 {
     text-align: center;
-    text-shadow: 2px 2px 2px black;
+    text-shadow: 1vw 1vw 1vw black;
+    font-size: 5vw;
 }
 
 .contactData {
     display: flex;
     justify-content: space-between;
-    font-size: larger;
+    font-size: 1.5vw;
 }
 
 .contactListItem h4{
-    font-size: larger;
+    font-size: 2vw;
     margin-bottom: 0%;
     text-decoration: underline;
 }
@@ -127,7 +129,7 @@ header h1 {
 }
 
 #infoContacto{
-    font-size: large;
+    font-size: 5vw;
 }
 
 button{
@@ -136,5 +138,8 @@ button{
 }
 button:hover{
     background-color: rgba(96, 137, 138, 0.8);
-    text
+}
+
+footer{
+    font-size: 1vw;
 }
