--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,9 @@ body {
     margin: 0;
     padding: 1%;
     width: 25%;
-    border: solid black 1px;
+    border: solid black  0.2vw;
     background-color: rgb(122, 172, 173);
-    box-shadow: 2px 2px 2px black;
+    box-shadow: 0.2vw 0.2vw 0.2vw black;
 }
 
 #bodyTextContainer {
@@ -25,8 +25,8 @@ li a {
     text-decoration: none;
 }
 
-/* Change the link color on hover */b
-li a:hover {
+/* Change the link color on hover */
+b li a:hover {
     background-color: #555;
     color: white;
 }
@@ -36,14 +36,13 @@ li a:hover {
     columns: 2;
     background-color: whitesmoke;
     padding: 1%;
-    border: black solid 3px;
-    box-shadow: 2px 2px 2px #000 ;
+    border: black solid  0.4vw;
+    box-shadow: 2px 2px 2px #000;
     margin: 2vw 2vw 1vw 1vw;
 }
 
 #imagenUsuario {
-    border: #000 solid;
-    box-shadow: 0.2vw 0.2vw  0.2vw black;
+    border: #000 solid 0.1vw;
     width: 100%;
     height: auto;
 }
@@ -51,20 +50,17 @@ li a:hover {
 #headerBox {
     background-color: rgba(122, 172, 173, 0.5);
     display: inline-block;
+    width: 100%;
 }
 
 #headerText {
-    width: 70%;
-    padding: 1%;
+    width: 75%;
     display: inline-block;
-
 }
 
 #imageContainer {
     display: inline-block;
-    padding: 1%;
     width: 20%;
-    border-color: #000;
 }
 
 #textSpace {
@@ -94,12 +90,13 @@ li a:hover {
 
 #nombreHeader {
     border: #000;
-    border-width: 1px;
+    border-width: 0.3vw;
 }
 
 #nombreContainer {
     border-color: #000;
-    border-width: 1px;
+    border-width: 0.3vw;
+
 }
 
 #nombreContainer h2 {
@@ -124,32 +121,37 @@ header h1 {
     font-size: 1.5vw;
 }
 
-.contactListItem h4{
+.contactListItem h4 {
     font-size: 2vw;
     margin-bottom: 0%;
     text-decoration: underline;
 }
 
-.contactListItem{
+.contactListItem {
     margin-left: 2%;
 }
 
-#infoContacto{
+#infoContacto {
     font-size: 5vw;
 }
 
-button{
+button {
     background-color: rgba(122, 172, 173, 0);
-    border: rgba(0, 0, 0, 0) ;
+    border: rgba(0, 0, 0, 0);
+
 }
-button:hover{
+button:hover {
     background-color: rgba(96, 137, 138, 0.8);
 }
 
-footer{
+footer {
     font-size: 1vw;
 }
 
-i{
-    
+#textSpace h3 {
+    margin-bottom: 1%;
+    font-size: 2vw;
+}
+button {
+    font-size: 2vw;
 }
