--- a/styles/style.css
+++ b/styles/style.css
@@ -170,4 +170,8 @@ button {
         width: 98%;
         padding: 5%;
     }
+    #textSpace {
+        margin-left: 0%;
+        padding-left: 0%;
+    }
   }
