--- a/styles/style.css
+++ b/styles/style.css
@@ -181,6 +181,16 @@ button {
         margin-left: 0%;
         padding-left: 0%;
     }
+    .textSpace p {
+        padding-left: 1%;
+        margin-top: 1%;
+        font-size: 3vw;
+    }
+    .textSpace h3 {
+        padding-left: 1%;
+        margin-top: 1%;
+        font-size: 3.5vw;
+    }
     .contactData {
         display: flex;
         justify-content: space-between;
